add Server newCourse

--- a/server/config
+++ b/server/config
@@ -1,5 +1,6 @@
 [Server]
 server=localhost
+upload_directory=./upload_tmp
 
 [Mail]
 server=localhost
@@ -7,6 +8,7 @@ sender=b07902125@csie.ntu.edu.tw
 admin = b07902125@csie.ntu.edu.tw
 
 [SQL]
-server = localhost
-
+host = localhost
+password = root
+user = root
 
