challenge server-interaction

--- a/lecturer/manifest.json
+++ b/lecturer/manifest.json
@@ -6,9 +6,9 @@
   "background": {
     "service_worker": "background.js"
   },
-  "permissions": ["storage", "activeTab", "scripting", "tabs"],
+  "permissions": ["storage", "activeTab", "scripting", "tabs","background"],
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "./html/popup.html",
     "default_icon": {
       "16": "/images/icon16.png",
       "32": "/images/icon32.png",
@@ -22,5 +22,5 @@
     "48": "/images/icon48.png",
     "128": "/images/icon128.png"
   },
-  "options_page": "options.html"
+  "options_page": "./html/options.html"
 }
