--- a/server/config
+++ b/server/config
@@ -6,7 +6,7 @@ upload_directory=./upload_tmp
 server= smtp.gmail.com:587
 sender= b07902125@csie.ntu.edu.tw
 admin = b07902125@csie.ntu.edu.tw
-pass = <YOUR_PASS>
+pass = <YOUR PASS>
 [SQL]
 host = localhost
 password = root
