--- a/student/manifest.json
+++ b/student/manifest.json
@@ -2,23 +2,22 @@
     "name": "Attendance checker (Student)",
     "description": "Online meeting attendance checker!",
     "version": "1.0",
-    "manifest_version": 3,
+    "manifest_version": 2,
     "background": {
-        "service_worker": "background.js"
+        "scripts": ["background.js"],
+        "persistent": false
     },
     "permissions": [
         "tabs",
         "storage",
-        "scripting",
         "background",
-        "alarms"
-    ],
-    "host_permissions": [
+        "alarms",
         "*://*/",
         "*://*/*/"
     ],
-    "action": {
-        "default_popup": "/html/popup.html",
+    "content_security_policy": "script-src 'self' https://www.google.com/ https://www.gstatic.com/; object-src 'self",
+    "browser_action": {
+        "default_popup": "./html/popup.html",
         "default_icon": {
             "16": "/images/app_icon16.png",
             "32": "/images/app_icon32.png",
